full_code working

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10-final"
+   "version": "3.9.2-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.7.10 64-bit ('OpenNMT-Study': conda)",
+   "display_name": "Python 3.9.2 64-bit ('Pytorch-tutorial': conda)",
    "metadata": {
     "interpreter": {
-     "hash": "068c66ba729910c3fd6db53eebb5b12403f116769a3282fe6b2f44fc428340e6"
+     "hash": "24c39d20c7d8a09e8403c5ad1c339197858a311367e5692aa6239c07be60f346"
     }
    }
   }
@@ -87,6 +87,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([[1., 1.],\n        [1., 1.],\n        [1., 1.],\n        [1., 1.]])\ntensor([[0.5952, 0.8660, 0.1219],\n        [0.5952, 0.8660, 0.1219],\n        [0.5952, 0.8660, 0.1219],\n        [0.5952, 0.8660, 0.1219]], grad_fn=<AddmmBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "# https://stackoverflow.com/questions/54916135/what-is-the-class-definition-of-nn-linear-in-pytorch\n",
+    "m = nn.Linear(2, 3) \n",
+    "input = torch.ones(4, 2) # 4x2\n",
+    "print(input)\n",
+    "\n",
+    "print(m(input)) # 4x3\n"
+   ]
   },
   {
    "cell_type": "code",
